--- a/package.json
+++ b/package.json
@@ -1,16 +1,32 @@
 {
   "name": "ivy-permission-plugin",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A React plugin for managing user permissions",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src --out-dir lib",
+    "test": "echo \"No tests specified\""
+  },
+  "dependencies": {
+    "react": "^18.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3"
+  },
+  "peerDependencies": {
+    "react": "^18.0.0"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/MoreCodeByTR/ivy-permission-plugin.git"
   },
-  "keywords": [],
+  "keywords": [
+    "react",
+    "permissions",
+    "context"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
