--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "ivy-permission-plugin",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A React plugin for managing user permissions",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    "import": "./dist/index.esm.js",
+    "require": "./dist/index.js"
+  },
   "scripts": {
-    "build": "babel src --out-dir lib",
+    "build": "tsup src/index.ts --format esm,cjs --dts",
     "test": "echo \"No tests specified\""
   },
   "dependencies": {
@@ -13,7 +19,10 @@
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/preset-env": "^7.26.9",
-    "@babel/preset-react": "^7.26.3"
+    "@babel/preset-react": "^7.26.3",
+    "@types/react": "^19.0.10",
+    "tsup": "^8.4.0",
+    "typescript": "^5.8.2"
   },
   "peerDependencies": {
     "react": "^18.0.0"
