--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.1.1",
   "description": "A React plugin for managing user permissions",
   "main": "dist/index.js",
-  "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "exports": {
-    "import": "./dist/index.js",
+    "import": "./dist/index.mjs",
     "require": "./dist/index.js"
   },
   "scripts": {
